[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/RobotoBold24.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/ui/Arrow Down Hover.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/Arrow Down.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/Arrow Down Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/Arrow Up Pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ui/Arrow Up Hover.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui/Arrow Up.png" type="Texture" id=7]
[ext_resource path="res://scripts/MainMenuRoundsNumber.gd" type="Script" id=8]

[node name="MatchNumberSelector" type="HBoxContainer"]
margin_right = 197.0
margin_bottom = 33.0
rect_min_size = Vector2( 197, 33 )
mouse_filter = 2
custom_constants/separation = 18
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHBox" type="VBoxContainer" parent="."]
margin_right = 19.0
margin_bottom = 33.0
mouse_filter = 2
custom_constants/separation = 2

[node name="RoundSelectUp" type="TextureButton" parent="ButtonHBox"]
margin_right = 19.0
margin_bottom = 15.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="RoundSelectDown" type="TextureButton" parent="ButtonHBox"]
margin_top = 17.0
margin_right = 19.0
margin_bottom = 32.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 2 )

[node name="RoundsLabel" type="Label" parent="."]
margin_left = 37.0
margin_right = 149.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Rounds:2"
align = 1
valign = 1

[node name="SFX" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="mouse_entered" from="ButtonHBox/RoundSelectUp" to="." method="_on_RoundSelectUp_mouse_entered"]
[connection signal="pressed" from="ButtonHBox/RoundSelectUp" to="." method="_on_RoundSelectUp_pressed"]
[connection signal="mouse_entered" from="ButtonHBox/RoundSelectDown" to="." method="_on_RoundSelectDown_mouse_entered"]
[connection signal="pressed" from="ButtonHBox/RoundSelectDown" to="." method="_on_RoundSelectDown_pressed"]
